FISH-8998: bump soap tck version to 3.0.1